starlark-rust/starlark/src/typing/tests/golden/test_bit_or_with_load.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Code:
load("foo.bzl", "foo")
test_type = int | foo()
def test() -> test_type:
    pass

No errors.

Approximations:
Approximation: Unknown type = "Span { begin: Pos(62), end: Pos(71) }"

Compiler typechecker (eval):
Compiler typechecker and eval results mismatch.

error: String literals are not allowed in type expressions: `"test"`
 --> filename:3:13
  |
3 | test_type = int | foo()
  |             ^^^^^^^^^^^
  |
